create district
