# controllers/admin/admin.js
@@ -66,5 +66,82 @@ exports.create = async (req, res) =>{
 
 
 exports.createDistric = async (req, res)=>{
-    console.log("creating district")
+    const {email, password, name, phone} = req.body;
+    /* #swagger.tags = ['Admin services']
+      #swagger.description = 'Endpoint to create a new district' 
+  
+        #swagger.parameters['obj'] = {
+        in: 'body',
+        description: 'create a new admin',
+        required: true,
+        type: 'object',
+        schema: {
+                    "email": "admin@gmail.com",
+                    $password: "password",
+                    "name" : "ade",
+                    "phone" : "09045677"
+                }
+       } 
+    */
+   const isDistrict = await  District.findOne({email});
+   if(isDistrict){
+        /* #swagger.responses[400] = {
+                description: "district already created",
+                schema: { 
+                    "error ":"District already created",
+                 }
+            } 
+        */
+       return res.status(400).json({error:"District already created"})
+    }  
+    const district = new District({email, password, phone, name});
+    district.save((err, data)=>{
+        console.log({err, data})
+        if(err || !data){
+
+            /* #swagger.responses[401] = {
+                description: "error in creating district",
+                schema: { 
+                    "error ":"error in creating district",
+                }
+            } 
+            */
+            return res.status(401).json({error:"error in creating district, please try again",err})
+        }
+
+            /* #swagger.responses[200] = {
+                description: "district succesfully created",
+                schema: { 
+                    "message ":"district succesfully created",
+                    "data":{
+                        "_id":"002whhe",
+                        "firstName":"adem",
+                        "lastName":"Oluyemi",
+                        "email":"adin@gmail.com"
+                    }
+                 }
+            } 
+            */
+        res.status(200).json({message:"District successfully created", data})
+    })
+}
+
+exports.districtList = async (req, res)=>{
+    /* 
+      #swagger.tags = ['Admin services']
+      #swagger.description = 'List of all district' 
+    */
+   District.find((err, data)=>{
+       if(err || !data){
+           /* #swagger.responses[401] = {
+                description: "Find all the district",
+                schema: { 
+                    "error ":"Disrict is not available",
+                }
+            } 
+            */
+
+       }
+   })
+
 }
