# routes/admin.js
@@ -3,7 +3,7 @@ const router = express.Router();
 
 
 const {signin, forgetPassword, resetPassword} = require("../controllers/admin/auth");
-const {create} = require("../controllers/admin/admin")
+const {create, createDistric} = require("../controllers/admin/admin")
 const {adminSignUpValidator} = require("../helpers/validator")
 
 
@@ -12,6 +12,7 @@ router.post("/admin/signin", signin);
 router.post("/admin/forgetPassword", forgetPassword);
 router.post("/admin/resetPassword", resetPassword);
 router.post("/admin", create);
+router.post("/admin/district", createDistric);
 
 
 
